# mantis

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .yamllint  01-constitution.md  02-specification.md  03-plan.md  04-tasks.md  CLAUDE.md  CLIENT_DEMO.md  FINDING_001_giflib_5_1_4.md  Makefile  README.md  alembic.ini  architecture.md  asan_stb_truetype_report.md  docker-compose.yml  harness-ffmpeg.yaml.example  harness-giflib-benchmark.yaml  harness.yaml.example  pyproject.toml
.github/issues/: 001-swappable-llm-backend.md
.github/workflows/: build-image.yml  image-security.yml  integration.yml  lint.yml  pre-commit.yml  test.yml
docs/: branch-protection.md
docs/compliance/: data-retention-policy.md  incident-response-playbook.md  nist-800-218-ssdf-mapping.md  nist-csf-2.0-mapping.md  threat-model.md
harness/: __init__.py  audit.py  benchmark.py  cli.py  config.py  crypto.py  dispatcher.py  findings.py  llm.py  models.py  parser.py  queue.py  ranker.py  sanitizers.py  static_ranker.py  trace.py  validator.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py
poc/giflib-5.1.4/: README.md  gen_gif2rgb_oob_read.py  gen_gifalloc_underflow.py  gen_gifbuild_stack_overflow.py  poc_gifalloc_trigger.txt  poc_gifbuild_overflow.txt
scripts/: generate-sbom.sh  scan-image.sh  setup-network.sh  teardown-network.sh
tests/fixtures/: agent_output_with_telemetry.json  msan_output.txt  sample_agent_response.json  sample_asan_output.txt  sample_ranking_response.json  sample_stderr_trace.jsonl  tsan_output.txt  ubsan_output.txt
tests/integration/: test_dispatcher.py  test_queue.py
tests/unit/: test_agent_loop.py  test_audit.py  test_benchmark.py  test_cli_build.py  test_config.py  test_crypto.py  test_findings.py  test_parser.py  test_ranker.py  test_sanitizers.py  test_static_ranker.py  test_trace.py  test_validator.py
worker/: .dockerignore  Dockerfile  entrypoint.sh
worker/agent/: loop.py  requirements.txt  run.py  tools.py
worker/prompts/: worker-system.txt  worker-task.txt.j2
