[project]
name = "vuln-harness"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.40",
    "click>=8.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis[asyncio]>=5.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "cryptography>=42.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "psycopg2-binary>=2.9.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harness"]

[project.scripts]
mantis = "harness.cli:cli"
vuln-harness = "harness.cli:cli"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "pre-commit>=4.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --ignore=tests/integration --cov=harness --cov-report=term --cov-fail-under=50"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [".venv", "runs", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["harness"]

[tool.coverage.run]
source = ["harness"]
omit = [
    "tests/*",
    "harness/cli.py",
    "harness/dispatcher.py",
    "harness/models.py",
    "harness/queue.py",
]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "if __name__"]
